<resources>
    <string name="app_name">Basic Android Components</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_category">Category</string>
    <string name="title_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--for bottom sheet dialog-->
    <string name="bottom_sheet_dialog_basic">Bottom Sheet Dialog Basic</string>
    <string name="shopping_and_put_in_shopping_bag">Shopping And Put In Shopping Bag</string>
    <string name="_4500_sp">4500 sp</string>
    <string name="al_mogambo_summakia_street">Al Mogambo _ Summakia Street</string>
    <string name="buy">Buy</string>
    <string name="show_information_about_product">Show Information About Product</string>
    <string name="free_delivery">Free Delivery</string>
    <string name="title_activity_map_modern_bottom_sheet_dialog">MapModernBottomSheetDialog</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="yes">Yes</string>
    <string name="no">no</string>
    <string name="uh_oh">Uh Oh</string>
    <string name="thank_for_watching">Thank For Watching…</string>


    <!-- for steppers text-->

    //Headings
    <string name="heading_one">Quick &amp; Easy Payments</string>
    <string name="heading_two">Instant Notifications</string>
    <string name="heading_three">Cashless Payment</string>
    <string name="heading_fourth">Pay Anywhere</string>

    //Description
    <string name="desc_one">Grow your Business By Accepting Card Payments with The New Card Reader</string>
    <string name="desc_two">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</string>
    <string name="desc_three">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</string>
    <string name="desc_fourth">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</string>
    <string name="skip">Skip</string>
    <string name="back">Back</string>
    <string name="todo">TODO</string>

    <!-- for Recyclerview text-->
    <!--
    <string-array name="cities_images">
        <item>@drawable/capetown</item>
        <item>@drawable/newyork</item>
        <item>@drawable/losangeles</item>
    </string-array>
-->

    <string name="view_profile">View Profile</string>
    <string name="tarek_hendi">TAREK HENDI</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="people_you_may_know_from_aleppo_university">People you may know From Aleppo University</string>
    <string name="study_at_cordoba_university">Study At Cordoba University</string>
</resources>