<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_centerInParent="true">

    <RelativeLayout
        android:layout_width="250dp"
        android:layout_height="300dp"
        android:layout_centerInParent="true"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:layout_width="250dp"
            android:layout_height="260dp"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/dialog_background">

            <TextView
                android:id="@+id/t3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="80dp"
                android:text="@string/uh_oh"
                android:textColor="@color/green"
                android:textStyle="bold"
                android:textSize="15sp">
            </TextView>

            <TextView
                android:id="@+id/t4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/t3"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:text="@string/thank_for_watching"
                android:textColor="@color/text"
                android:textStyle="bold"
                android:textSize="15sp">
            </TextView>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/backs"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="10dp"
                android:background="@drawable/no_button_background"
                android:text="@string/no"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textStyle="bold"/>

        </RelativeLayout>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animation_view2"
            android:layout_width="100dp"
            android:layout_height="90dp"
            android:layout_centerHorizontal="true"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/sad"
            app:lottie_url="REPLACE_JSON_URL"/>
    </RelativeLayout>

</RelativeLayout>